# django-on-docker

./: .dockerignore  .editorconfig  .env.sample  .gitignore  .pylintrc  Dockerfile  README.md  dev.requirements.txt  django-on-docker.code-workspace  docker-cmd.sh  docker-compose.caddy.yaml  docker-compose.debug.yaml  docker-entrypoint.sh  load-env.txt  pyproject.toml  pytest.ini  pyvenv.cfg  requirements.txt
.github/workflows/: test.yml
backend/: asgi.py  csrf.py  db.py  email.py  https.py  logging.py  sessions.py  settings.py  urls.py  utils.py  wsgi.py
backend/polls/: admin.py  models.py  tests.py  urls.py  views.py
backend/polls/migrations/: 0001_initial.py  0002_question_upload.py
commands/: export-dev.sh  export-prod.sh  isort.sh
templates/admin/: base_site.html
