[tool.poetry]
name = "django-docker-template"
version = "0.1.0"
description = "A Django Production ready template"
authors = ["Arvind .A <pingarvindforquestions@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = ">=4.2,<4.3"
psycopg2-binary = "^2.9.9"
wait-for-it = "^2.2.2"
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-django = "^4.8.0"
coverage = "^7.4.4"
djlint = "^1.34.1"
black = "^24.3.0"
pylint = "^3.1.0"
isort = "^5.13.2"
autoflake = "^2.3.1"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
